# jam5

./: .gitignore  Cargo.toml  flake.nix
client/: Cargo.toml  release.sh
client/assets/certificates/: cert.pem  key.pem
client/src/: lib.rs
client/src/assets/: mod.rs
client/src/audio/: mod.rs  sfx.rs  soundtrack.rs
client/src/camera/: mod.rs
client/src/inputs/: mod.rs
client/src/network/: bike.rs  config.rs  connect.rs  mod.rs
client/src/render/: animation.rs  bike.rs  chat.rs  diagnostics.rs  egui.rs  gizmos.rs  grid.rs  kills.rs  label.rs  leaderboard.rs  map.rs  minimap.rs  mod.rs  player.rs  trail.rs  zones.rs
client/src/screen/: credits.rs  loading.rs  mod.rs  playing.rs  splash.rs  title.rs
client/src/ui/: interaction.rs
client/web/: index.html
server/: Cargo.toml
server/server/debug/.fingerprint/ahash-673e68354fd7d4a8/: lib-ahash  lib-ahash.json
server/server/debug/.fingerprint/ahash-82da0d3e414189e8/: build-script-build-script-build  build-script-build-script-build.json
server/server/debug/.fingerprint/ahash-c4f3fb6687ef852c/: run-build-script-build-script-build  run-build-script-build-script-build.json
server/server/debug/.fingerprint/allocator-api2-a26698d10998d806/: lib-allocator_api2  lib-allocator_api2.json
server/server/debug/.fingerprint/autocfg-38395899240a7b5d/: lib-autocfg  lib-autocfg.json
server/server/debug/.fingerprint/cfg-if-3161b53fef7af6c3/: lib-cfg_if  lib-cfg_if.json
server/server/debug/.fingerprint/concurrent-queue-e279500abf3c3daa/: lib-concurrent_queue  lib-concurrent_queue.json
server/server/debug/.fingerprint/crossbeam-utils-52f9375fe452606b/: run-build-script-build-script-build  run-build-script-build-script-build.json
server/server/debug/.fingerprint/crossbeam-utils-70bfb68fe552cccd/: build-script-build-script-build  build-script-build-script-build.json
server/server/debug/.fingerprint/crossbeam-utils-7d6e5c5ae3014cad/: lib-crossbeam_utils  lib-crossbeam_utils.json
server/server/debug/.fingerprint/equivalent-700d6fa0dd5b8ac4/: lib-equivalent  lib-equivalent.json
server/server/debug/.fingerprint/futures-core-2a99a3e6747a4f72/: lib-futures_core  lib-futures_core.json
server/server/debug/.fingerprint/futures-io-8a540745f8d566f6/: lib-futures_io  lib-futures_io.json
server/server/debug/.fingerprint/getrandom-9ce3cc89620c8dbf/: lib-getrandom  lib-getrandom.json
server/server/debug/.fingerprint/hashbrown-5489e9f83f3bcbfe/: lib-hashbrown  lib-hashbrown.json
server/server/debug/.fingerprint/indexmap-b18944dfa0a0e8cd/: lib-indexmap  lib-indexmap.json
server/server/debug/.fingerprint/libm-633ed047e4937e21/: run-build-script-build-script-build  run-build-script-build-script-build.json
server/server/debug/.fingerprint/libm-d68e6b41fde1ef67/: build-script-build-script-build  build-script-build-script-build.json
server/server/debug/.fingerprint/log-afe525cf94809fec/: lib-log  lib-log.json
server/server/debug/.fingerprint/num-traits-65180ebc9045c5bb/: build-script-build-script-build  build-script-build-script-build.json
server/server/debug/.fingerprint/once_cell-aaf03a50562af03b/: lib-once_cell  lib-once_cell.json
server/server/debug/.fingerprint/parking-10fe8b6ec6a4986f/: lib-parking  lib-parking.json
server/server/debug/.fingerprint/pin-project-lite-88245afb44ebc4f6/: lib-pin_project_lite  lib-pin_project_lite.json
server/server/debug/.fingerprint/ppv-lite86-afa7c49610d59873/: lib-ppv_lite86  lib-ppv_lite86.json
server/server/debug/.fingerprint/proc-macro2-549617e7ae12f189/: run-build-script-build-script-build  run-build-script-build-script-build.json
server/server/debug/.fingerprint/proc-macro2-56238230577f2230/: build-script-build-script-build  build-script-build-script-build.json
server/server/debug/.fingerprint/rand-a19939b368747669/: lib-rand  lib-rand.json
server/server/debug/.fingerprint/rand_chacha-41eed95aff64e6e2/: lib-rand_chacha  lib-rand_chacha.json
server/server/debug/.fingerprint/rand_core-df77c12bf342b0ad/: lib-rand_core  lib-rand_core.json
server/server/debug/.fingerprint/serde-9cb15d59272e10f0/: build-script-build-script-build  build-script-build-script-build.json
server/server/debug/.fingerprint/serde-b987ffd137d8a980/: run-build-script-build-script-build  run-build-script-build-script-build.json
server/server/debug/.fingerprint/slab-0c5babbb9c696599/: run-build-script-build-script-build  run-build-script-build-script-build.json
server/server/debug/.fingerprint/slab-a17a784c5720a493/: build-script-build-script-build  build-script-build-script-build.json
server/server/debug/.fingerprint/thiserror-0d4db44f0fae012a/: build-script-build-script-build  build-script-build-script-build.json
server/server/debug/.fingerprint/thiserror-c5be0b61376dcc36/: run-build-script-build-script-build  run-build-script-build-script-build.json
server/server/debug/.fingerprint/toml_datetime-2dd081ce8ada51c3/: lib-toml_datetime  lib-toml_datetime.json
server/server/debug/.fingerprint/unicode-ident-3177e5ed9a2004dc/: lib-unicode_ident  lib-unicode_ident.json
server/server/debug/.fingerprint/version_check-f16d1b416d6c1d1d/: lib-version_check  lib-version_check.json
server/server/debug/.fingerprint/windows-targets-1b0b08b22899868c/: lib-windows_targets  lib-windows_targets.json
server/server/debug/.fingerprint/windows_x86_64_msvc-4e491cbb731d639a/: build-script-build-script-build  build-script-build-script-build.json
server/server/debug/.fingerprint/windows_x86_64_msvc-8ae639469a70f853/: lib-windows_x86_64_msvc  (+1 more)
server/src/: lib.rs
server/src/game/: start.rs
server/src/network/: config.rs  connections.rs  disconnections.rs  mod.rs
server/src/player/: death.rs  mod.rs  trail.rs  zone.rs
shared/: Cargo.toml
shared/src/: lib.rs  main.rs
shared/src/debug/: mod.rs
shared/src/map/: mod.rs
shared/src/network/: config.rs  inputs.rs  message.rs  mod.rs  protocol.rs
shared/src/network/components/: player.rs
shared/src/physics/: mod.rs  movement.rs  util.rs
shared/src/player/: bike.rs  death.rs  mod.rs  scores.rs  trail.rs  zone.rs
(+9 files in other folders)
