[package]
name = "client"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "client"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
    "shared/dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "shared/dev",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]

[dependencies]
shared = { path = "../shared", default-features = false }
avian2d.workspace = true
bevy.workspace = true
bevy_turborand.workspace = true
lightyear.workspace = true
clap.workspace = true
tokio.workspace = true
leafwing-input-manager.workspace = true
bevy_prototype_lyon = "0.12.0"
bevy_screen_diagnostics = "0.6"
bevy_egui = "0.28"
egui_extras = "0.28"
