[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
    "shared/dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "shared/dev",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]

[dependencies]
shared = { path = "../shared" }
avian2d.workspace = true
bevy.workspace = true
lightyear.workspace = true
clap.workspace = true

async-compat = "0.2.4"
