[package]
name = "server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "server"

[features]
default = [
    # Default to a native dev build.
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    #    "bevy/dynamic_linking",
    #    "bevy/bevy_dev_tools",
    #    "shared/dev",
]


[dependencies]
shared = { path = "../shared" }
avian2d.workspace = true
bevy.workspace = true
lightyear.workspace = true
clap.workspace = true
tokio.workspace = true

async-compat = "0.2.4"
rand = "0.8.5"
