[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
avian2d.workspace = true
bevy.workspace = true
bevy_turborand.workspace = true
lightyear.workspace = true
clap.workspace = true



[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]