[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
avian2d.workspace = true
bevy.workspace = true
bevy_turborand.workspace = true
leafwing-input-manager.workspace = true
lightyear.workspace = true
clap.workspace = true
serde.workspace = true
flo_curves.workspace = true
bevy-inspector-egui = { version = "0.25.1", optional = true }
geo-types = "0.7.13"
geo-clipper = "0.8.0"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "dep:bevy-inspector-egui",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]